--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search_sharks">Search</string>
     <string name="clear_search">Clear</string>
+    <string name="download_image">Download</string>
+    <string name="open_in_flickr">Open in App</string>
+    <string name="sharkFeedTransition">Shark Feed Transition</string>
 </resources>
